kubernetes/apps/base/business-system/label-generator/app/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.haydenagencies.com.au/networking.istio.io/virtualservice_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: label-generator
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLOUDFLARED_INGRESS_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'false'
spec:
  hosts:
    - 'labels.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 5000
            host: label-generator.business-system.svc.cluster.local
          weight: 100
